--- a/styles/main.css
+++ b/styles/main.css
@@ -26,9 +26,6 @@ p {
   font-size: 16px;
   line-height: 22px; }
 
-.textarea {
-  height: 100px; }
-
 .input,
 .textarea {
   text-align: center;
@@ -89,6 +86,10 @@ p {
     line-height: 36px;
     text-transform: uppercase;
     color: #8a7e7e; }
+
+.textarea {
+  height: 100px;
+  width: 99%; }
 
 .button {
   cursor: pointer;
@@ -173,9 +174,12 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0;
+  max-width: 964px;
+  margin: auto; }
   .nav li {
     text-decoration: none;
     color: #fff;
@@ -210,7 +214,7 @@ p {
   background-repeat: no-repeat; }
   .hero .container {
     position: relative;
-    min-height: 600px; }
+    min-height: 765px; }
 
 .best .container {
   display: -webkit-box;
