--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,8 @@ p {
 
 .textarea {
   height: 100px;
-  width: 99%; }
+  width: 99%;
+  line-height: 34px; }
 
 .button {
   cursor: pointer;
@@ -353,8 +354,19 @@ p {
           justify-content: space-between; }
 
 .apart__adress {
-  color: #00aaef;
-  font-weight: 100; }
+  display: inline-block;
+  color: #01aaef;
+  font-weight: 100;
+  -webkit-transition: margin-left 0.15s, color 0.15s, -webkit-transform 0.15s;
+  transition: margin-left 0.15s, color 0.15s, -webkit-transform 0.15s;
+  transition: transform 0.15s, margin-left 0.15s, color 0.15s;
+  transition: transform 0.15s, margin-left 0.15s, color 0.15s, -webkit-transform 0.15s; }
+  .apart__adress:hover {
+    -webkit-transform: scaleX(1.04);
+            transform: scaleX(1.04);
+    margin-left: 5px;
+    text-decoration: none;
+    color: #007fb1; }
 
 .apart h2 {
   font-style: normal;
