--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,11 @@ p {
   font-size: 16px;
   line-height: 22px; }
 
+.textarea {
+  height: 100px;
+  width: 99%;
+  line-height: 34px; }
+
 .input,
 .textarea {
   text-align: center;
@@ -87,11 +92,6 @@ p {
     text-transform: uppercase;
     color: #8a7e7e; }
 
-.textarea {
-  height: 100px;
-  width: 99%;
-  line-height: 34px; }
-
 .button {
   cursor: pointer;
   font-size: 14px;
@@ -141,6 +141,14 @@ p {
   color: white;
   max-width: 964px;
   margin: auto; }
+  .header__info {
+    background: rgba(0, 0, 0, 0.4);
+    -webkit-transition: background 0.3s, color 0.3s;
+    transition: background 0.3s, color 0.3s; }
+    .header__info:hover {
+      color: black;
+      cursor: pointer;
+      background: transparent; }
   .header__logo {
     background-image: url(./../images/logo.png);
     background-repeat: no-repeat;
@@ -153,11 +161,11 @@ p {
     text-transform: uppercase;
     text-decoration: none;
     border-bottom: 1px dashed #606060;
-    -webkit-transition: color 0.3s;
-    transition: color 0.3s; }
+    -webkit-transition: background 0.3s, color 0.3s;
+    transition: background 0.3s, color 0.3s; }
     .header__call:hover {
       cursor: pointer;
-      color: #5db0ff; }
+      color: rgba(0, 0, 0, 0.4); }
   .header__phone {
     text-decoration: none; }
   .header__menu-btn {
@@ -197,9 +205,7 @@ p {
             box-sizing: border-box; }
     .nav li:hover {
       cursor: pointer;
-      -webkit-transform: scale(1.05);
-              transform: scale(1.05);
-      border: 1px solid rgba(255, 255, 255, 0.3); }
+      border: 1px solid white; }
 
 .wrapper {
   background: #fff;
@@ -209,13 +215,14 @@ p {
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
 
 .hero {
-  background-image: url(./../images/hero.png);
+  background-image: url(./../images/hero.jpg);
   background-size: cover;
   background-position: 50% 100%;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
   .hero .container {
     position: relative;
-    min-height: 765px; }
+    min-height: 100vh; }
 
 .best .container {
   display: -webkit-box;
@@ -245,7 +252,7 @@ p {
   padding-left: 0; }
 
 .footer {
-  background-image: url(./../images/footer.png);
+  background-image: url(./../images/footer.jpg);
   background-repeat: no-repeat;
   height: 540px;
   background-size: cover;
@@ -563,8 +570,6 @@ p {
     width: 66vw; }
   .apart__photo-mid-right,
   .apart__photo-mid-left {
-    width: 49vw; }
-  .footer {
-    background-position: 0, 50%; } }
+    width: 49vw; } }
 
 /*# sourceMappingURL=main.css.map */
